--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -247,9 +247,11 @@ body {
 	padding-left: 0;
 	padding-right: 0;
 	color: var(--text-color);
+	text-align: center;
 }
 .table {
 	width: 100%;
+
 	tr {
 		border-bottom: 1px solid var(--gray-color);
 		@media (max-width: 600px) {
@@ -260,14 +262,20 @@ body {
 	th {
 		padding-bottom: 1.9rem;
 		font-weight: 400;
-		text-align: left;
+
+		&:nth-of-type(1) {
+			text-align: left;
+		}
+		&:nth-of-type(5) {
+			text-align: left;
+			padding-left: 4rem;
+		}
+
 		@media (max-width: 430px) {
 			font-size: 12px;
 		}
 	}
 }
-// ? Content
-
 header {
 	background-color: var(--body-color);
 	position: fixed;
@@ -683,7 +691,6 @@ header {
 		}
 	}
 }
-
 .main {
 	flex-grow: 1;
 
@@ -2537,20 +2544,22 @@ header {
 		}
 	}
 }
-
 .row-3 {
 	display: flex;
 	justify-content: center;
 	font-size: 20px;
 }
-
-// ? profile
 .profile__body {
 	min-height: 100vh;
-	padding-bottom: 1rem;
+	padding-bottom: 5rem;
 
-	@media (max-width: 430px) {
-		padding: 4.5rem 0 5rem 0;
+	.site-holder {
+		@media (max-width: 1024px) {
+			padding: 0 60px;
+		}
+		@media (max-width: 768px) {
+			padding: 0 30px;
+		}
 	}
 
 	.profile__burger {
@@ -2563,6 +2572,7 @@ header {
 		}
 
 		.header__navigation {
+			gap: 16px;
 			@media (max-width: 1014px) {
 				display: none;
 			}
@@ -2622,10 +2632,10 @@ header {
 		}
 	}
 	nav {
-		@media (max-width: 640px) {
-			margin-bottom: 1.5rem;
-			display: none;
-		}
+		// @media (max-width: 1024px) {
+		// 	margin-bottom: 1.5rem;
+		// 	display: none;
+		// }
 	}
 
 	.profile__nav-navbar-item {
@@ -2635,6 +2645,11 @@ header {
 		color: var(--text-color);
 		transition: 0.2s ease-in-out;
 		padding: 10px 19px;
+
+		@media (max-width: 1024px) {
+			margin-bottom: 1.5rem;
+			display: none;
+		}
 
 		&:hover {
 			color: var(--blue-dark);
@@ -2680,7 +2695,7 @@ header {
 		}
 
 		@media (max-width: 640px) {
-			margin-top: 110px;
+			margin-top: -40px;
 		}
 
 		.verify_mobile {
@@ -2748,6 +2763,10 @@ header {
 				font-size: 20px;
 				color: var(--gray-color);
 				margin-bottom: 24px;
+
+				@media (max-width: 430px) {
+					font-size: 14px;
+				}
 			}
 
 			&-list {
@@ -2770,6 +2789,10 @@ header {
 
 						&:hover {
 							color: var(--blue-light);
+						}
+
+						@media (max-width: 430px) {
+							font-size: 14px;
 						}
 					}
 				}
@@ -2836,7 +2859,7 @@ header {
 
 			/* Адаптация для телефонов */
 			@media (max-width: 480px) {
-				padding: 20px;
+				padding: 20px 0;
 				max-width: 100%;
 
 				&-title {
@@ -3169,7 +3192,7 @@ header {
 			margin-bottom: 40px;
 
 			@media (max-width: 1399px) {
-				max-width: 100%;
+				max-width: 1399px;
 			}
 			@media (max-width: 430px) {
 				padding: 0;
@@ -3305,6 +3328,12 @@ header {
 			background-color: var(--profile-block);
 			box-shadow: var(--shadow-split);
 			border-radius: 30px;
+
+			.qr__icon {
+				@media (max-width: 480px) {
+					max-width: 20px;
+				}
+			}
 
 			&-into {
 				span {
@@ -3596,7 +3625,7 @@ header {
 					}
 					@media (max-width: 640px) {
 						font-size: 14px;
-						min-width: 260px;
+						min-width: 250px;
 					}
 					@media (max-width: 540px) {
 						font-size: 14px;
@@ -3606,16 +3635,26 @@ header {
 					@media (max-width: 434px) {
 						font-size: 14px;
 						min-width: 137px;
-						max-width: 164px;
+						max-width: 162px;
 					}
-					@media (max-width: 390px) {
+					@media (max-width: 414px) {
 						font-size: 14px;
-						max-width: 145px;
+						min-width: 137px;
+						max-width: 143px;
+					}
+
+					@media (max-width: 384px) {
+						font-size: 14px;
+						max-width: 142px;
+					}
+					@media (max-width: 375px) {
+						font-size: 14px;
+						max-width: 135px;
 					}
 					@media (max-width: 360px) {
 						font-size: 14px;
 						min-width: 118px;
-						max-width: 138px;
+						max-width: 130px;
 					}
 					@media (max-width: 344px) {
 						font-size: 14px;
@@ -3624,8 +3663,8 @@ header {
 					}
 					@media (max-width: 320px) {
 						font-size: 14px;
-						min-width: 118px;
-						max-width: 118px;
+						min-width: 110px;
+						max-width: 110px;
 					}
 				}
 			}
@@ -3748,6 +3787,7 @@ header {
 				align-items: center;
 				flex-wrap: wrap;
 				position: relative;
+				gap: 10px;
 
 				@media (max-width: 768px) {
 					gap: 30px;
@@ -4288,10 +4328,13 @@ header {
 	flex-direction: column;
 	border-radius: 30px;
 	padding: 40px 98px 48px 45px;
-
+	margin-top: -7rem;
 	@media (max-width: 768px) {
 		padding: 40px 45px 48px 45px;
-		margin-top: 1.5rem;
+	}
+	@media (max-width: 768px) {
+		padding: 40px 20px 48px 20px;
+		background: var(--body-color);
 	}
 
 	&-container {
@@ -4439,7 +4482,6 @@ header {
 		color: var(--form-text);
 	}
 }
-// ! trash
 .react-datepicker {
 	background-color: var(--bg-mobile) !important; /* Задаем нужный цвет фона */
 }
@@ -4460,12 +4502,10 @@ header {
 .react-datepicker__day:hover {
 	color: white; /* Цвет текста дней */
 }
-
 .react-datepicker__day--selected {
 	background-color: #ff4757; /* Цвет выделенного дня */
 	color: white; /* Цвет текста выделенного дня */
 }
-
 .Tapbar {
 	// padding: 10px;
 	backdrop-filter: blur(4.5px);
@@ -4487,14 +4527,13 @@ header {
 	line-height: 16px;
 	font-weight: 400;
 	text-align: center;
-	max-height: 70px;
+	height: 73px;
 	max-width: 70px;
 
-	
 	&.active {
 		canvas {
 			filter: invert(38%) sepia(78%) saturate(542%) hue-rotate(189deg)
-			brightness(94%) contrast(89%);
+				brightness(94%) contrast(89%);
 		}
 	}
 
@@ -4515,10 +4554,13 @@ header {
 			background: var(--blue) !important;
 			border-radius: 50%;
 			min-width: 60px !important;
-			min-height: 60px !important
+			min-height: 60px !important;
 		}
 	}
-
+	.shadow {
+		box-shadow: 4px 4px 56px 0px rgba(177, 177, 181, 0.25);
+		backdrop-filter: blur(6px);
+	}
 	.lottie {
 		display: flex;
 		align-items: center;
@@ -4530,6 +4572,13 @@ header {
 				brightness(94%) contrast(89%);
 		}
 
+		&.big {
+			canvas {
+				min-width: 110px !important;
+				min-height: 110px !important;
+			}
+		}
+
 		canvas {
 			width: 100%;
 			min-width: 60px !important;
@@ -4539,7 +4588,6 @@ header {
 		}
 	}
 }
-
 ::-webkit-scrollbar {
 	display: none;
 }
