--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -4225,7 +4225,7 @@ header {
 		padding: 40px 20px;
 	}
 	@media (max-width: 430px) {
-		margin-top: 1.5rem;
+		margin-top: -8.5rem;
 		background: var(--body-color);
 		padding: 40px 0px 48px 00px;
 		box-shadow: none;
@@ -4590,4 +4590,10 @@ header {
 }
 ::-webkit-scrollbar {
 	display: none;
+}
+
+
+input  {
+	font-size: 16px !important;
+	padding-right: 10px !important;
 }
