--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -4597,3 +4597,9 @@ input  {
 	font-size: 16px !important;
 	padding-right: 10px !important;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+	select:focus, textarea:focus, input:focus {
+					font-size: 26px !important;
+			}
+	}
