--- a/src/app/[locale]/page.scss
+++ b/src/app/[locale]/page.scss
@@ -4594,8 +4594,10 @@ header {
 
 
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-	select:focus, textarea:focus, input:focus {
-					font-size: 16px !important;
-			}
-	}
+@media (max-width: 430px) {
+	@media screen and (-webkit-min-device-pixel-ratio: 0) {
+		select:focus, textarea:focus, input:focus {
+						font-size: 16px !important;
+				}
+		}
+}
