--- a/styles/page.scss
+++ b/styles/page.scss
@@ -239,6 +239,750 @@ body {
 .preloader__white {
 	background: #fff;
 }
+.initial_header {
+	background-color: var(--body-color);
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: fit-content;
+	width: 100%;
+	z-index: 99999;
+	transition: box-shadow 0.3s;
+
+	.site-holder {
+		@media (max-width: 430px) {
+			padding: 0 20px !important;
+		}
+	}
+
+	&.box-shadow {
+		box-shadow: 0 0 30px 0 #0d2853b1;
+	}
+
+	.lan__change {
+		display: flex;
+		align-items: center;
+
+		button {
+			font-family: inherit;
+			color: var(--text-color);
+			font-size: 1rem;
+		}
+	}
+	.header__logo {
+		display: block;
+		transform: translateY(-12px);
+		position: relative;
+
+		span {
+			position: absolute;
+			bottom: -6px;
+			left: 39px;
+			font-size: 1.8rem;
+		}
+		svg {
+			width: auto;
+			height: auto;
+		}
+
+		@media (max-width: 992px) {
+			img {
+				width: 88px;
+				height: auto;
+			}
+		}
+	}
+	.header__navigation {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		gap: 28px;
+
+		@media (max-width: 1830px) {
+			gap: 1.538vw;
+		}
+		@media (max-width: 1280px) {
+			gap: 8px;
+		}
+		@media (max-width: 992px) {
+			display: none;
+		}
+
+		&-item {
+			font-size: 20px;
+			line-height: 28px;
+			font-weight: 400;
+			color: var(--text-color);
+			transition: 0.2s ease-in-out;
+
+			&:hover {
+				color: var(--blue-dark);
+			}
+			@media (min-width: 1830px) {
+				font-size: 22px;
+			}
+			@media (max-width: 1280px) {
+				font-size: 16px !important;
+			}
+		}
+
+		.header__actions {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			gap: 24px;
+
+			.header__buttons {
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				gap: 20px;
+
+				&-login {
+					padding: 12px;
+					width: 132px;
+					font-size: 20px;
+					line-height: 28px;
+					font-weight: 500;
+					text-align: center;
+					color: var(--text-color);
+					transition: 0.2s ease-in-out;
+					&:hover {
+						color: var(--blue-dark);
+					}
+					@media (min-width: 1830px) {
+						font-size: 1.305vw;
+						line-height: 1.538vw;
+					}
+					@media (max-width: 1830px) {
+						font-size: 1.105vw;
+						line-height: 1.538vw;
+					}
+					@media (max-width: 1280px) {
+						font-size: 1.25vw;
+						line-height: 1.5625vw;
+						width: 9.375vw;
+					}
+					@media (max-width: 992px) {
+						font-size: 16px;
+						line-height: 24px;
+						width: 120px;
+					}
+					@media (max-width: 575px) {
+						display: none;
+					}
+				}
+				&-signup {
+					padding: 12px;
+					width: 155px;
+					font-size: 20px;
+					line-height: 28px;
+					font-weight: 500;
+					text-align: center;
+					border-radius: 50px;
+					background-color: var(--blue);
+					color: #fff;
+					transition: 0.2s ease-in-out;
+					margin-right: 20px;
+					&:hover {
+						background-color: var(--blue-light);
+					}
+					@media (min-width: 1830px) {
+						font-size: 1.305vw;
+						line-height: 1.538vw;
+					}
+					@media (max-width: 1830px) {
+						font-size: 1.105vw;
+						line-height: 1.538vw;
+						flex-shrink: 0;
+					}
+					@media (max-width: 1280px) {
+						font-size: 1.25vw;
+						line-height: 1.5625vw;
+						width: 9.375vw;
+					}
+					@media (max-width: 992px) {
+						font-size: 16px;
+						line-height: 24px;
+						width: 120px;
+					}
+					@media (max-width: 575px) {
+						display: none;
+					}
+				}
+				&-assets {
+					@media (max-width: 430px) {
+						display: none;
+					}
+				}
+			}
+			.header__icons {
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				justify-content: center;
+				gap: 12px;
+				@media (max-width: 992px) {
+					display: none;
+				}
+			}
+			.theme-switch {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+			.header__icons-item {
+				width: 44px;
+				height: 44px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				color: var(--logo-color);
+
+				svg {
+					object-fit: contain;
+					object-position: center;
+				}
+			}
+		}
+	}
+	.header__content {
+		width: 100%;
+		padding: 40px 30px;
+		margin: 0 auto;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-between;
+
+		@media (max-width: 1830px) {
+			padding: 2.083vw 30px;
+		}
+		@media (max-width: 992px) {
+			padding: 13px 0px;
+		}
+
+		.lan__change {
+			display: flex;
+			align-items: center;
+
+			button {
+				font-family: inherit;
+				color: var(--text-color);
+				font-size: 1rem;
+			}
+		}
+		.header__logo {
+			display: block;
+			transform: translateY(-12px);
+			position: relative;
+
+			span {
+				position: absolute;
+				bottom: -6px;
+				left: 39px;
+				font-size: 1.8rem;
+			}
+			svg {
+				width: auto;
+				height: auto;
+			}
+
+			@media (max-width: 992px) {
+				img {
+					width: 88px;
+					height: auto;
+				}
+			}
+		}
+		.header__navigation {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			gap: 28px;
+
+			@media (max-width: 1830px) {
+				gap: 1.538vw;
+			}
+			@media (max-width: 1280px) {
+				gap: 8px;
+			}
+			@media (max-width: 992px) {
+				display: none;
+			}
+
+			&-item {
+				font-size: 20px;
+				line-height: 28px;
+				font-weight: 400;
+				color: var(--text-color);
+				transition: 0.2s ease-in-out;
+
+				&:hover {
+					color: var(--blue-dark);
+				}
+				@media (min-width: 1830px) {
+					font-size: 25px;
+				}
+				// @media (max-width: 1830px) {
+				// 	font-size: 1.405vw;
+				// 	line-height: 1.538vw;
+				// }
+				// @media (max-width: 1280px) {
+				// 	font-size: 1.4vw;
+				// 	line-height: 1.5625vw;
+				// }
+			}
+
+			.header__actions {
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				gap: 24px;
+
+				.header__buttons {
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+					gap: 20px;
+
+					&-login {
+						padding: 12px;
+						width: 132px;
+						font-size: 20px;
+						line-height: 28px;
+						font-weight: 500;
+						text-align: center;
+						color: var(--text-color);
+						transition: 0.2s ease-in-out;
+						&:hover {
+							color: var(--blue-dark);
+						}
+						@media (min-width: 1830px) {
+							font-size: 1.305vw;
+							line-height: 1.538vw;
+						}
+						@media (max-width: 1830px) {
+							font-size: 1.105vw;
+							line-height: 1.538vw;
+						}
+						@media (max-width: 1280px) {
+							font-size: 1.25vw;
+							line-height: 1.5625vw;
+							width: 9.375vw;
+						}
+						@media (max-width: 992px) {
+							font-size: 16px;
+							line-height: 24px;
+							width: 120px;
+						}
+						@media (max-width: 575px) {
+							display: none;
+						}
+					}
+					&-signup {
+						padding: 12px;
+						width: 155px;
+						font-size: 20px;
+						line-height: 28px;
+						font-weight: 500;
+						text-align: center;
+						border-radius: 50px;
+						background-color: var(--blue);
+						color: #fff;
+						transition: 0.2s ease-in-out;
+						margin-right: 20px;
+						&:hover {
+							background-color: var(--blue-light);
+						}
+						@media (min-width: 1830px) {
+							font-size: 1.305vw;
+							line-height: 1.538vw;
+						}
+						@media (max-width: 1830px) {
+							font-size: 1.105vw;
+							line-height: 1.538vw;
+							flex-shrink: 0;
+						}
+						@media (max-width: 1280px) {
+							font-size: 1.25vw;
+							line-height: 1.5625vw;
+							width: 9.375vw;
+						}
+						@media (max-width: 992px) {
+							font-size: 16px;
+							line-height: 24px;
+							width: 120px;
+						}
+						@media (max-width: 575px) {
+							display: none;
+						}
+					}
+					&-assets {
+						@media (max-width: 430px) {
+							display: none;
+						}
+					}
+				}
+				.header__icons {
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+					justify-content: center;
+					gap: 12px;
+					@media (max-width: 992px) {
+						display: none;
+					}
+				}
+				.theme-switch {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+				.header__icons-item {
+					width: 44px;
+					height: 44px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					color: var(--logo-color);
+
+					svg {
+						object-fit: contain;
+						object-position: center;
+					}
+				}
+			}
+		}
+	}
+	.header__actions {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		gap: 24px;
+
+		select,
+		option {
+			font-size: 20px;
+
+			@media (min-width: 1820px) {
+				font-size: 22px;
+			}
+
+			@media (max-width: 1280px) {
+				font-size: 16px;
+			}
+		}
+
+		.header__buttons {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			gap: 20px;
+
+			@media (max-width: 1280px) {
+				gap: 10px;
+			}
+			&-login {
+				padding: 12px;
+				width: 132px;
+				font-size: 20px;
+				line-height: 28px;
+				font-weight: 500;
+				text-align: center;
+				color: var(--text-color);
+				transition: 0.2s ease-in-out;
+				&:hover {
+					color: var(--blue-dark);
+				}
+				@media (min-width: 1830px) {
+					font-size: 1.305vw;
+					line-height: 1.538vw;
+				}
+				@media (max-width: 1830px) {
+					font-size: 1.105vw;
+					line-height: 1.538vw;
+				}
+				@media (max-width: 1280px) {
+					font-size: 1.25vw;
+					line-height: 1.5625vw;
+					width: 9.375vw;
+				}
+				@media (max-width: 992px) {
+					font-size: 16px;
+					line-height: 24px;
+					width: 120px;
+				}
+				@media (max-width: 575px) {
+					display: none;
+				}
+			}
+			&-signup {
+				padding: 12px;
+				width: 155px;
+				font-size: 20px;
+				line-height: 28px;
+				font-weight: 500;
+				text-align: center;
+				border-radius: 50px;
+				background-color: var(--blue);
+				color: #fff;
+				transition: 0.2s ease-in-out;
+				&:hover {
+					background-color: var(--blue-light);
+				}
+				@media (min-width: 1830px) {
+					font-size: 1.305vw;
+					line-height: 1.538vw;
+				}
+				@media (max-width: 1830px) {
+					font-size: 1.105vw;
+					line-height: 1.538vw;
+					flex-shrink: 0;
+				}
+				@media (max-width: 1280px) {
+					font-size: 1.25vw;
+					line-height: 1.5625vw;
+					width: 9.375vw;
+				}
+				@media (max-width: 992px) {
+					font-size: 16px;
+					line-height: 24px;
+					width: 120px;
+				}
+				@media (max-width: 575px) {
+					display: none;
+				}
+			}
+			&-assets {
+				@media (max-width: 430px) {
+					display: none;
+				}
+			}
+		}
+		.header__icons {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			justify-content: center;
+			gap: 12px;
+			@media (max-width: 992px) {
+				display: none;
+			}
+		}
+		.theme-switch {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		.header__icons-item {
+			width: 44px;
+			height: 44px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			color: var(--logo-color);
+
+			svg {
+				object-fit: contain;
+				object-position: center;
+			}
+		}
+	}
+	// ? mob V.
+
+	.menu {
+		display: none;
+		position: relative;
+		cursor: pointer;
+		width: 30px;
+		height: 20px;
+		z-index: 9999;
+		transition: 0.3s all ease;
+
+		@media (max-width: 992px) {
+			display: block;
+		}
+
+		& span {
+			z-index: 9;
+			position: absolute;
+			left: 0;
+			height: 2px;
+			width: 100%;
+			top: 50%;
+			transform: translateY(-50%) scale(1);
+			display: block;
+			background: var(--burger-span);
+			transition: 0.3s;
+		}
+		&::before,
+		&::after {
+			content: '';
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			background: var(--burger-span);
+
+			left: 0;
+			display: block;
+			transition: 0.3s;
+		}
+		&::after {
+			top: 0;
+		}
+		&::before {
+			bottom: 0;
+		}
+		&.active span {
+			scale: 0;
+			opacity: 0;
+		}
+		&.active::after {
+			transform: rotate(45deg);
+			top: 9px;
+		}
+		&.active::before {
+			transform: rotate(-45deg);
+			bottom: 9px;
+		}
+	}
+	.m_header {
+		overflow: hidden;
+		display: none;
+		position: fixed;
+		z-index: 9999;
+		width: 50%;
+		height: 100vh;
+		top: 0;
+		right: 0;
+		overflow-y: auto;
+		background: var(--body-color);
+		transform-origin: 0 0;
+		list-style-type: none;
+		transition: 0.3s all ease-in-out;
+		transform: translateX(110%);
+
+		@media (max-width: 992px) {
+			display: block;
+		}
+		@media (max-width: 442px) {
+			width: 100vw;
+			&.active {
+				transform: translateX(0);
+			}
+		}
+
+		&.active {
+			transform: translateX(9%);
+		}
+	}
+	.wrapper {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		transition: 0.3s all ease-in-out;
+
+		span {
+			width: 100%;
+			height: 1px;
+			background-color: var(--text-gray);
+			transition: 0.3s;
+		}
+
+		.img__wrapper {
+			padding: 1.2rem 1.5rem;
+			width: 100%;
+			display: flex;
+			align-items: center;
+			gap: 1.5rem;
+		}
+
+		.m__nav {
+			padding: 28px 32px;
+			display: flex;
+			flex-direction: column;
+			gap: 1rem;
+
+			&-list {
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
+			}
+
+			&-item {
+				font-size: 24px;
+				line-height: 32px;
+				font-weight: 400;
+				padding: 0;
+				display: block;
+				color: var(--text-color);
+				transition: 0.2s ease-in-out;
+				
+				&:hover {
+					color: var(--blue-dark);
+				}
+			}
+
+			.m__buttons {
+				width: 100%;
+				display: none;
+
+				@media (max-width: 575px) {
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+					gap: 2rem;
+				}
+
+				&-login {
+					padding: 12px;
+					width: 100%;
+					font-size: 20px;
+					line-height: 28px;
+					font-weight: 500;
+					text-align: center;
+					color: var(--text-color);
+					transition: 0.2s ease-in-out;
+					&:hover {
+						color: var(--blue-dark);
+					}
+					@media (max-width: 575px) {
+						font-size: 16px;
+						line-height: 24px;
+						width: 100%;
+					}
+				}
+				&-signup {
+					padding: 12px;
+					width: 100%;
+					font-size: 20px;
+					line-height: 28px;
+					font-weight: 500;
+					text-align: center;
+					border-radius: 50px;
+					background-color: var(--blue);
+					color: #fff;
+					transition: 0.2s ease-in-out;
+					&:hover {
+						background-color: var(--blue-light);
+					}
+					@media (max-width: 575px) {
+						font-size: 16px;
+						line-height: 24px;
+						width: 100%;
+					}
+				}
+			}
+			.m__outline {
+				border: 1px solid var(--blue-light);
+				border-radius: 50px;
+			}
+		}
+	}
+}
 .header {
 	background-color: var(--body-color);
 	position: fixed;
@@ -249,6 +993,12 @@ body {
 	width: 100%;
 	z-index: 20;
 	transition: box-shadow 0.3s;
+
+	.site-holder {
+		@media (max-width: 430px) {
+			padding: 0 20px !important;
+		}
+	}
 
 	&.box-shadow {
 		box-shadow: 0 0 30px 0 #0d2853b1;
