added Activity, fixed state of verification, fixed style, improved logic of pages

--- a/styles/page.scss
+++ b/styles/page.scss
@@ -5743,3 +5743,16 @@ body {
 		}
 	}
 }
+.activity {
+	.swiper-pagination {
+		bottom: 8px !important;
+		&-bullet {
+			background-color: #515151;
+			width: 16px;
+			height: 16px;
+			&-active {
+				background-color: #073D95;
+			}
+		}
+	}
+}
