--- a/styles/page.scss
+++ b/styles/page.scss
@@ -121,7 +121,7 @@
 	--header: #000000;
 	--bd: #000000;
 	--hightLight-text: #073d95;
-	--body-color: #F9F9FA;
+	--body-color: #f9f9fa;
 	--icon-color: #000000;
 	--getstarted-item: #ffffff66;
 	--logo-color: #3b3b3b;
@@ -920,7 +920,7 @@ body {
 				display: block;
 				color: var(--text-color);
 				transition: 0.2s ease-in-out;
-				
+
 				&:hover {
 					color: var(--blue-dark);
 				}
@@ -1816,12 +1816,12 @@ body {
 
 			&-blue {
 				@media (max-width: 430px) {
-					max-width: 129px
+					max-width: 129px;
 				}
 			}
 			&-transparent {
 				@media (max-width: 430px) {
-					max-width: 129px
+					max-width: 129px;
 				}
 			}
 
@@ -3616,9 +3616,8 @@ body {
 		z-index: 100;
 
 		@media (max-width: 430px) {
-		z-index: 97;
+			z-index: 97;
 		}
-
 
 		&.box-shadow {
 			box-shadow: 0 0 20px #073d95;
@@ -3687,7 +3686,7 @@ body {
 			scale: 1.2;
 		}
 
-		@media (max-width: 1014px) {
+		@media (max-width: 1024px) {
 			display: flex;
 		}
 	}
@@ -4076,7 +4075,9 @@ body {
 			background-color: var(--button-bg);
 			color: var(--button-text);
 			cursor: pointer;
-			transition: background-color 0.3s, color 0.3s;
+			transition:
+				background-color 0.3s,
+				color 0.3s;
 			font-size: 15px;
 
 			&:hover {
@@ -4499,7 +4500,9 @@ body {
 				font-size: 12px;
 				border-radius: 10px;
 				cursor: pointer;
-				transition: background-color 0.3s, color 0.3s;
+				transition:
+					background-color 0.3s,
+					color 0.3s;
 				white-space: nowrap; /* Предотвращает перенос текста */
 				min-width: 80px;
 				color: #fff;
@@ -5017,7 +5020,6 @@ body {
 					object-fit: contain;
 				}
 			}
-		
 		}
 
 		@media (max-width: 1280px) {
@@ -5686,7 +5688,7 @@ body {
 	}
 }
 .modal-new {
-	@media (max-width: 768px) {
+	@media (max-width: 999px) {
 		top: 0;
 		z-index: 100 !important;
 	}
@@ -5695,7 +5697,9 @@ body {
 	@media (max-width: 430px) {
 		left: 50% !important;
 		top: 50% !important;
-		translate: -50%, -50% !important;
+		translate:
+			-50%,
+			-50% !important;
 		z-index: 99 !important;
 	}
 }
@@ -5745,8 +5749,29 @@ body {
 			width: 16px;
 			height: 16px;
 			&-active {
-				background-color: #073D95;
+				background-color: #073d95;
 			}
 		}
+	}
+}
+[role="listbox"] { 
+	gap: 20px !important;
+}
+.id-1 {
+	[data-slot="inner-wrapper"] {
+		border-radius: 12px;
+		padding: 0 .5rem;
+	}
+	.bg-default-100 {
+		background: transparent;
+		box-shadow: none;
+	}
+	.group[data-focus='true'] .group-data-\[focus\=true\]\:bg-default-100 {
+		background-color: transparent;
+		box-shadow: none;
+	}
+	[data-slot='main-wrapper'] {
+		/* Ваши стили */
+		background-color: none !important;
 	}
 }
