--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -173,21 +173,30 @@ legend {
 	}
 }
 
-/* Скрываем определённые столбцы на мобильных устройствах */
+
+.spec {
+	@layer utilities {
+		th:nth-child(2),
+		td:nth-child(2) {
+			@apply hidden md:table-cell;
+		}
+	
+		th:nth-child(3),
+		td:nth-child(3) {
+			@apply hidden md:table-cell;
+		}
+	
+		th:nth-child(5),
+		td:nth-child(5) {
+			@apply hidden md:table-cell;
+		}
+	}
+}
+
 @layer utilities {
-  th:nth-child(2),
-  td:nth-child(2) {
-    @apply hidden md:table-cell;
-  }
-
-  th:nth-child(3),
-  td:nth-child(3) {
-    @apply hidden md:table-cell;
-  }
-
-  th:nth-child(5),
-  td:nth-child(5) {
-    @apply hidden md:table-cell;
-  }
+	tr:nth-child(2),
+	tr:nth-child(2) {
+		@apply hidden
+	}
 }
 
