--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -199,4 +199,9 @@ legend {
 		@apply hidden
 	}
 }
+@media (min-width: 768px) {
+	.backdrop-opacity-disabled {
+		background: none !important;
+	}
+}
 
