--- a/styles/page.scss
+++ b/styles/page.scss
@@ -1763,7 +1763,8 @@ body {
 	}
 
 	.site-holder {
-		max-width: 1716px;
+		// max-width: 1716px;
+		max-width: 1920px;
 		width: 100%;
 		padding: 0 30px;
 		margin: 0 auto;
