--- a/app/[locale]/(auth)/auth.scss
+++ b/app/[locale]/(auth)/auth.scss
@@ -531,7 +531,7 @@
 					}
 				}
 
-				button {
+				 a, button {
 					width: 100%;
 					padding: 12px 0;
 					border-radius: 50px;
@@ -543,7 +543,6 @@
 					background: #c9c9c9;
 					transition: background 0.3s ease-in-out;
 					text-align: center;
-					pointer-events: none;
 					@media (max-width: 1280px) {
 						padding: 10px 0;
 					}
