--- a/app/[locale]/(auth)/auth.scss
+++ b/app/[locale]/(auth)/auth.scss
@@ -471,7 +471,7 @@
 
 				#login,
 				#pass,
-				#referal {
+				#referal, #vcode1, #vcode2 {
 					font-family: inherit;
 					font-size: 20px;
 					font-weight: 400;
