--- a/styles/page.scss
+++ b/styles/page.scss
@@ -2448,7 +2448,8 @@ body {
 			gap: 28px;
 
 			@media (min-width: 1920px) {
-				left: -20px;
+				left: 86px;
+				bottom: -264px;
 				gap: 48px;
 			}
 			@media (max-width: 1440px) {
