--- a/styles/page.scss
+++ b/styles/page.scss
@@ -45,9 +45,6 @@
 		font-size: 18px;
 		line-height: 24px;
 	}
-	// @media (max-width: 575px) {
-	// 	max-width: 120px;
-	// }
 }
 .btn-transparent {
 	display: block;
@@ -79,13 +76,10 @@
 		max-width: 210px;
 	}
 	@media (max-width: 992px) {
-		width: 212px;
+		max-width: 280px;
 		font-size: 18px;
 		line-height: 24px;
 	}
-	// @media (max-width: 575px) {
-	// 	max-width: 120px;
-	// }
 }
 :root {
 	// accordion
