--- a/styles/page.scss
+++ b/styles/page.scss
@@ -3636,7 +3636,8 @@ body {
 		display: block;
 		position: fixed;
 		z-index: 10;
-		width: 428px;
+		max-width: 480px;
+		width: 100%;
 		height: 100dvh;
 		height: calc(var(--vh, 1vh) * 100);
 		top: 0;
