--- a/styles/page.scss
+++ b/styles/page.scss
@@ -332,7 +332,7 @@ body {
 
 				&-login {
 					padding: 12px;
-					width: 132px;
+					min-width: 132px;
 					font-size: 20px;
 					line-height: 28px;
 					font-weight: 500;
@@ -353,12 +353,12 @@ body {
 					@media (max-width: 1280px) {
 						font-size: 1.25vw;
 						line-height: 1.5625vw;
-						width: 9.375vw;
+						min-width: 9.375vw;
 					}
 					@media (max-width: 992px) {
 						font-size: 16px;
 						line-height: 24px;
-						width: 120px;
+						min-width: 120px;
 					}
 					@media (max-width: 575px) {
 						display: none;
@@ -366,7 +366,7 @@ body {
 				}
 				&-signup {
 					padding: 12px;
-					width: 155px;
+					min-width: 155px;
 					font-size: 20px;
 					line-height: 28px;
 					font-weight: 500;
@@ -391,12 +391,12 @@ body {
 					@media (max-width: 1280px) {
 						font-size: 1.25vw;
 						line-height: 1.5625vw;
-						width: 9.375vw;
+						min-width: 9.375vw;
 					}
 					@media (max-width: 992px) {
 						font-size: 16px;
 						line-height: 24px;
-						width: 120px;
+						min-width: 120px;
 					}
 					@media (max-width: 575px) {
 						display: none;
@@ -540,7 +540,7 @@ body {
 
 					&-login {
 						padding: 12px;
-						width: 132px;
+						min-width: 132px;
 						font-size: 20px;
 						line-height: 28px;
 						font-weight: 500;
@@ -561,12 +561,12 @@ body {
 						@media (max-width: 1280px) {
 							font-size: 1.25vw;
 							line-height: 1.5625vw;
-							width: 9.375vw;
+							min-width: 9.375vw;
 						}
 						@media (max-width: 992px) {
 							font-size: 16px;
 							line-height: 24px;
-							width: 120px;
+							min-width: 120px;
 						}
 						@media (max-width: 575px) {
 							display: none;
@@ -574,7 +574,7 @@ body {
 					}
 					&-signup {
 						padding: 12px;
-						width: 155px;
+						min-width: 155px;
 						font-size: 20px;
 						line-height: 28px;
 						font-weight: 500;
@@ -599,12 +599,12 @@ body {
 						@media (max-width: 1280px) {
 							font-size: 1.25vw;
 							line-height: 1.5625vw;
-							width: 9.375vw;
+							min-width: 9.375vw;
 						}
 						@media (max-width: 992px) {
 							font-size: 16px;
 							line-height: 24px;
-							width: 120px;
+							min-width: 120px;
 						}
 						@media (max-width: 575px) {
 							display: none;
@@ -677,7 +677,7 @@ body {
 			}
 			&-login {
 				padding: 12px;
-				width: 132px;
+				min-width: 132px;
 				font-size: 20px;
 				line-height: 28px;
 				font-weight: 500;
@@ -698,12 +698,12 @@ body {
 				@media (max-width: 1280px) {
 					font-size: 1.25vw;
 					line-height: 1.5625vw;
-					width: 9.375vw;
+					min-width: 9.375vw;
 				}
 				@media (max-width: 992px) {
 					font-size: 16px;
 					line-height: 24px;
-					width: 120px;
+					min-width: 120px;
 				}
 				@media (max-width: 575px) {
 					display: none;
@@ -711,7 +711,7 @@ body {
 			}
 			&-signup {
 				padding: 12px;
-				width: 155px;
+				min-width: 155px;
 				font-size: 20px;
 				line-height: 28px;
 				font-weight: 500;
@@ -735,12 +735,12 @@ body {
 				@media (max-width: 1280px) {
 					font-size: 1.25vw;
 					line-height: 1.5625vw;
-					width: 9.375vw;
+					min-width: 9.375vw;
 				}
 				@media (max-width: 992px) {
 					font-size: 16px;
 					line-height: 24px;
-					width: 120px;
+					min-width: 120px;
 				}
 				@media (max-width: 575px) {
 					display: none;
