--- a/styles/page.scss
+++ b/styles/page.scss
@@ -3411,7 +3411,7 @@ body {
   }
 
   &__faq {
-    padding: 120px 0 7rem;
+    padding: 120px 0 0;
     @media (max-width: 992px) {
       padding: 40px 0 0 0;
     }
