--- a/styles/page.scss
+++ b/styles/page.scss
@@ -1997,7 +1997,7 @@ body {
             align-items: center;
             justify-content: center;
             padding: 0;
-            width: 152px;
+            // width: 152px;
             min-height: 48px;
           }
         }
